[gd_scene load_steps=5 format=3 uid="uid://43qxppf3880"]

[ext_resource type="PackedScene" uid="uid://bb3iu3lc7ek0c" path="res://assets/sharkmodel/great_hammerhead.glb" id="1_8l5qy"]
[ext_resource type="Script" uid="uid://bstjxtsqq6ctm" path="res://script/shark.gd" id="1_v5iaq"]

[sub_resource type="SphereShape3D" id="SphereShape3D_8l5qy"]

[sub_resource type="SphereShape3D" id="SphereShape3D_v5iaq"]

[node name="Shark" type="Node3D"]
script = ExtResource("1_v5iaq")

[node name="Sketchfab_Scene" parent="." instance=ExtResource("1_8l5qy")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.188, -2.3, 0.476)

[node name="Sketchfab_model" parent="Sketchfab_Scene" index="0"]
transform = Transform3D(0.217391, 0, 0, 0, 4.82706e-17, 0.217391, 0, -0.217391, 4.82706e-17, 0, -1.83617, 0)

[node name="detectArea" type="Area3D" parent="."]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="detectArea"]
transform = Transform3D(25, 0, 0, 0, 25, 0, 0, 0, 25, 0, 0, 0)
shape = SubResource("SphereShape3D_8l5qy")

[node name="catchArea" type="Area3D" parent="."]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="catchArea"]
transform = Transform3D(6.5, 0, 0, 0, 6.5, 0, 0, 0, 6.5, 0, 0, 0)
shape = SubResource("SphereShape3D_v5iaq")

[connection signal="body_entered" from="detectArea" to="." method="_on_detect_area_body_entered"]
[connection signal="body_entered" from="catchArea" to="." method="_on_catch_area_body_entered"]

[editable path="Sketchfab_Scene"]
